# geoprompt

./: .coveragerc  .dockerignore  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  BROAD_EXCEPT_MAPPING.csv  BROAD_EXCEPT_MAPPING.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  G2_IMPLEMENTATION_COMPLETE.md  LICENSE  MANIFEST.in  PUBLISHING.md  README.md  SECURITY.md  _inspect_api.py  claims-to-tests.json  generate_assets.py  generate_notebooks.py  mkdocs.yml  noxfile.py  pyproject.toml  pyrightconfig.json  tox.ini
_strata_temp/: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE  pyproject.toml  pyrightconfig.json
_strata_temp/.devcontainer/: devcontainer.json
_strata_temp/docs/submission/: TMLR_CHECKLIST.md  TMLR_TEMPLATE.md
_strata_temp/examples/: quick_demo.py  tutorial.ipynb
_strata_temp/outputs/: profile_run.prof
_strata_temp/paper/: flowcharts.md  strata-paper.md  work-items.md
_strata_temp/paper/jmlr-upload-packet/: README.md
_strata_temp/paper/submission_jmlr/: .gitignore  README.md  README_SUBMISSION_CHECKLIST.md  convert_with_pandoc.sh  cover_letter_template.md  data_provenance.txt  manuscript_draft.tex  references.bib
_strata_temp/paper/tables/: alpha_sweep.md  baseline.md  full_comparison.md  lambda_sensitivity.md
_strata_temp/scripts/: build_pdf.sh  build_submission_bundle.py  generate_tables.py  plot_paper_figures.py  profile_benchmark.py  run_benchmark.py  run_conditional_coverage.py  run_lambda_only.py  run_real_data_benchmark.py
_strata_temp/src/hetero_conformal/: advanced_calibrators.py  conformal.py  diagnostics.py  ensemble.py  experiment.py  explainability.py  geo_integration.py  graph.py  hyperparam_search.py  meta_calibrator.py  metrics.py  model.py  real_data.py  streaming.py
_strata_temp/tests/: test_advanced.py  test_conformal.py  test_edge_cases.py  test_graph.py  test_metrics.py  test_model.py
projects/arroyo-flood-forecasting-lab/: .gitignore  PUBLISHING.md  README.md  pyproject.toml
projects/arroyo-flood-forecasting-lab/data/: arroyo_stage_series.json  oso_creek_stage_series.json
projects/arroyo-flood-forecasting-lab/docs/: architecture.md  case-study-walkthrough.md  demo-storyboard.md
projects/arroyo-flood-forecasting-lab/src/arroyo_flood_forecasting_lab/: __init__.py  charts.py  lab.py  refresh_data.py  summary_page.py
projects/arroyo-flood-forecasting-lab/tests/: test_lab.py
projects/causal-lens/: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  PUBLISHING.md  README.md  pyproject.toml  test_results.txt
projects/causal-lens/.github/workflows/: publish-pypi.yml
projects/causal-lens/docs/: causal-lens-review-copy.docx  jss-submission-bundle.md  jss-submission-readiness.md  literature-review.md  references.md
projects/causal-lens/docs/jss-submission-package/: README.txt  causal-lens.bib
projects/causal-lens/docs/jss-upload-bundle/: LICENSE  README.txt  causal-lens.out  causal-lens.tex
projects/causal-lens/outputs/tables/: cross_dataset_benchmark_summary.csv  external_comparison.csv  (+20 more)
projects/causal-lens/replications/: README.md  replicate_lalonde.py  replicate_nhefs.py  replicate_simulation.py  run_all.py
projects/causal-lens/tests/: test_benchmarks.py  test_diagnostics.py  test_estimators.py  test_panel_iv_simulation.py  test_public_datasets.py  test_reporting.py  test_run_all.py
projects/environmental-time-series-lab/: README.md  pyproject.toml
projects/environmental-time-series-lab/docs/: architecture.md  demo-storyboard.md
projects/environmental-time-series-lab/tests/: test_lab.py
projects/geoprompt/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  PUBLISHING.md  README.md  pyproject.toml
projects/geoprompt/data/: benchmark_regions.json
projects/geoprompt/docs/: TODO.md  architecture.md  big-backlog.md  improvement-roadmap.md  performance-strategy.md  release-notes-0.1.11.md  release-notes-0.1.13.md  release-notes-0.1.14.md  release-notes-0.1.15.md  release-notes-0.1.5.md  release-notes-0.1.6.md  tool-inventory.json  tool-methodology.md  tool-roadmap.md
projects/geoprompt/outputs/: geoprompt_comparison_report.json
projects/geoprompt/tests/: test_audit_edge_cases.py  test_compare_benchmarks_441_520.py  test_cross_validation.py  test_equations_audit.py  test_geoprompt.py  test_new_tools.py  test_new_tools_p3.py  test_reference_parity.py  test_spatial_weights.py  test_tools_131_148.py  test_tools_149_186.py  test_tools_169_171_523_530.py  test_tools_187_199.py  test_tools_200_201.py  test_tools_202_222.py  test_tools_223_245.py  test_tools_246_268.py  test_tools_269_290.py  test_tools_291_312.py  test_tools_313_334.py  test_tools_335_356.py  test_tools_357_378.py  test_tools_379_400.py
projects/postgis-service-blueprint/: .gitignore  LICENSE  PUBLISHING.md  README.md  pyproject.toml
projects/postgis-service-blueprint/docs/: demo-storyboard.md
projects/postgis-service-blueprint/tests/: test_blueprint.py
projects/qgis-operations-workbench/: .gitignore  PUBLISHING.md  README.md  pyproject.toml  pyrightconfig.json
projects/qgis-operations-workbench/data/: station_review_points.geojson
projects/qgis-operations-workbench/docs/: architecture.md  demo-storyboard.md  geopackage-workflow.md
projects/qgis-operations-workbench/tests/: test_workbench.py
projects/raster-monitoring-pipeline/: PUBLISHING.md  README.md  pyproject.toml
projects/raster-monitoring-pipeline/docs/: demo-storyboard.md
projects/raster-monitoring-pipeline/tests/: test_pipeline.py
projects/station-forecasting-workbench/: README.md  pyproject.toml
projects/station-forecasting-workbench/docs/: architecture.md  demo-storyboard.md
projects/station-forecasting-workbench/tests/: test_workbench.py
projects/station-risk-classification-lab/: PUBLISHING.md  README.md  pyproject.toml  pyrightconfig.json
projects/station-risk-classification-lab/data/: station_risk_samples.json
projects/station-risk-classification-lab/docs/: architecture.md  demo-storyboard.md
projects/station-risk-classification-lab/tests/: test_lab.py
(+586 files in other folders)
