[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geoprompt"
version = "0.2.0"
description = "Custom spatial analysis package with a lightweight spatial frame, GeoJSON workflows, and GeoPrompt equations."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = ["spatial-analysis", "gis", "geojson", "geometry"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: GIS",
    "Typing :: Typed",
]
dependencies = [
    "typing-extensions>=4.8; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<9.0",
    "pytest-cov>=5.0,<7.0",
    "hypothesis>=6.112,<7.0",
    "mypy>=1.11,<2.0",
    "nox>=2024.4.15",
    "tox>=4.18,<5.0",
    "pre-commit>=3.8,<5.0",
    "ruff>=0.6,<1.0",
    "ipykernel>=6.29,<7.0",
    "nbclient>=0.10,<1.0",
    "nbformat>=5.10,<6.0",
    "notebook>=7.3,<8.0",
]
developer = [
    "pytest>=8.2,<9.0",
    "pytest-cov>=5.0,<7.0",
    "hypothesis>=6.112,<7.0",
    "mypy>=1.11,<2.0",
    "nox>=2024.4.15",
    "tox>=4.18,<5.0",
    "pre-commit>=3.8,<5.0",
    "ruff>=0.6,<1.0",
    "ipykernel>=6.29,<7.0",
    "nbclient>=0.10,<1.0",
    "nbformat>=5.10,<6.0",
    "notebook>=7.3,<8.0",
]
network = [
    "numpy>=1.26,<3.0",
]
notebook = [
    "ipykernel>=6.29,<7.0",
    "nbclient>=0.10,<1.0",
    "nbformat>=5.10,<6.0",
    "notebook>=7.3,<8.0",
]
viz = [
    "matplotlib>=3.9,<4.0",
    "folium>=0.15,<1.0",
    "plotly>=5.24,<7.0",
]
io = [
    "pandas>=2.2,<3.0",
    "pyarrow>=16,<20",
    "geopandas>=1.0,<2.0",
]
excel = [
    "pandas>=2.2,<3.0",
    "openpyxl>=3.1.5,<4.0",
]
analyst = [
    "matplotlib>=3.9,<4.0",
    "folium>=0.15,<1.0",
    "plotly>=5.24,<7.0",
    "pandas>=2.2,<3.0",
    "pyarrow>=16,<20",
    "openpyxl>=3.1.5,<4.0",
    "geopandas>=1.0,<2.0",
    "pyproj>=3.6,<4.0",
    "shapely>=2.0,<3.0",
]
compare = [
    "geopandas>=1.0,<2.0",
    "pyproj>=3.6,<4.0",
    "shapely>=2.0,<3.0",
]
overlay = [
    "shapely>=2.0,<3.0",
]
projection = [
    "pyproj>=3.6,<4.0",
]
db = [
    "sqlalchemy>=2.0,<3.0",
]
raster = [
    "rasterio>=1.3,<2.0",
]
service = [
    "fastapi>=0.115,<1.0",
    "uvicorn>=0.30,<1.0",
]
stats = []
all = [
    "numpy>=1.26,<3.0",
    "matplotlib>=3.9,<4.0",
    "ipykernel>=6.29,<7.0",
    "nbclient>=0.10,<1.0",
    "nbformat>=5.10,<6.0",
    "notebook>=7.3,<8.0",
    "folium>=0.15,<1.0",
    "plotly>=5.24,<7.0",
    "pandas>=2.2,<3.0",
    "pyarrow>=16,<20",
    "openpyxl>=3.1.5,<4.0",
    "geopandas>=1.0,<2.0",
    "pyproj>=3.6,<4.0",
    "shapely>=2.0,<3.0",
    "sqlalchemy>=2.0,<3.0",
    "rasterio>=1.3,<2.0",
    "fastapi>=0.115,<1.0",
    "uvicorn>=0.30,<1.0",
]
full = [
    "numpy>=1.26,<3.0",
    "matplotlib>=3.9,<4.0",
    "ipykernel>=6.29,<7.0",
    "nbclient>=0.10,<1.0",
    "nbformat>=5.10,<6.0",
    "notebook>=7.3,<8.0",
    "folium>=0.15,<1.0",
    "plotly>=5.24,<7.0",
    "pandas>=2.2,<3.0",
    "pyarrow>=16,<20",
    "openpyxl>=3.1.5,<4.0",
    "geopandas>=1.0,<2.0",
    "pyproj>=3.6,<4.0",
    "shapely>=2.0,<3.0",
    "sqlalchemy>=2.0,<3.0",
    "rasterio>=1.3,<2.0",
    "fastapi>=0.115,<1.0",
    "uvicorn>=0.30,<1.0",
]

[project.scripts]
geoprompt = "geoprompt.cli:main"
geoprompt-demo = "geoprompt.demo:main"
geoprompt-compare = "geoprompt.compare:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
geoprompt = ["py.typed"]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.mypy]
python_version = "3.9"
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]