[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "causal-lens"
version = "0.5.0"
description = "Causal inference toolkit for observational data and treatment-effect diagnostics."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "Matthew Powell", email = "mattpowell.gis@gmail.com"},
]
keywords = ["causal inference", "statistics", "econometrics", "treatment effects", "difference in differences", "regression discontinuity", "instrumental variables"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "matplotlib>=3.9,<4.0",
    "numpy>=1.26,<3.0",
    "pandas>=2.2,<4.0",
    "scikit-learn>=1.5,<2.0",
    "scipy>=1.13,<3.0",
    "statsmodels>=0.14,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<9.0",
]

[project.scripts]
causal-lens = "causal_lens.cli:main"

[project.urls]
Homepage = "https://github.com/matthew-lottly/Matt-Powell/tree/main/projects/causal-lens"
Repository = "https://github.com/matthew-lottly/Matt-Powell"
Issues = "https://github.com/matthew-lottly/Matt-Powell/issues"
Documentation = "https://github.com/matthew-lottly/Matt-Powell/tree/main/projects/causal-lens"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
causal_lens = ["py.typed"]
"causal_lens.datasets" = ["*.csv"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
