[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geoprompt"
version = "0.1.7"
description = "Pure-Python spatial analysis toolkit with GeoJSON-native geometries and GeoPandas-style frame workflows."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "Matthew Powell"},
]
keywords = ["spatial-analysis", "gis", "geojson", "geometry"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: GIS",
    "Typing :: Typed",
]
dependencies = [
    "matplotlib>=3.9,<4.0",
]

[project.urls]
Homepage = "https://github.com/matthew-lottly/Matt-Powell/tree/main/projects/geoprompt"
Repository = "https://github.com/matthew-lottly/Matt-Powell"
Issues = "https://github.com/matthew-lottly/Matt-Powell/issues"
Documentation = "https://github.com/matthew-lottly/Matt-Powell/tree/main/projects/geoprompt"

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<9.0",
]
compare = [
    "esda>=2.9,<3.0",
    "geopandas>=1.0,<2.0",
    "libpysal>=4.14,<5.0",
    "pykrige>=1.7,<2.0",
    "pyproj>=3.6,<4.0",
    "shapely>=2.0,<3.0",
    "statsmodels>=0.14,<1.0",
]
overlay = [
    "shapely>=2.0,<3.0",
]
projection = [
    "pyproj>=3.6,<4.0",
]
raster = [
    "rasterio>=1.3,<2.0",
]
io = [
    "fiona>=1.9,<2.0",
    "openpyxl>=3.1,<4.0",
    "pyshp>=2.3,<3.0",
]

[project.scripts]
geoprompt-demo = "geoprompt.demo:main"
geoprompt-compare = "geoprompt.compare:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]