[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "postgis-service-blueprint"
version = "0.1.0"
description = "Open spatial service blueprint for publishing PostGIS-backed layers."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.9,<4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<9.0",
]

[project.scripts]
postgis-blueprint = "postgis_service_blueprint.blueprint:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
