[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "raster-monitoring-pipeline"
version = "0.1.0"
description = "Raster change-detection pipeline for monitoring scenarios."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.9,<4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<9.0",
]

[project.scripts]
raster-pipeline = "raster_monitoring_pipeline.pipeline:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
