[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "station-risk-classification-lab"
version = "0.1.0"
description = "Classification lab for station risk triage and explainable review output."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.9,<4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<9.0",
]

[project.scripts]
station-risk-lab = "station_risk_classification_lab.lab:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]